增加条目触摸背景的设置，可以增加触摸背景色变化和水波纹效果

--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -35,6 +35,8 @@
             app:textColorSelected="@color/tab_selected_color"
             app:itemTextSize="8sp"
             app:itemMarginTop="-5dp"
+            app:openTouchBg="true"
+            app:touchDrawable="@drawable/selector_bg"
             />
 
         <com.chaychan.library.BottomBarItem
@@ -48,6 +50,8 @@
             app:textColorSelected="@color/tab_selected_color"
             app:itemTextSize="8sp"
             app:itemMarginTop="-5dp"
+            app:openTouchBg="true"
+            app:touchDrawable="@drawable/selector_bg"
             />
 
 
@@ -62,6 +66,8 @@
             app:textColorSelected="@color/tab_selected_color"
             app:itemTextSize="8sp"
             app:itemMarginTop="-5dp"
+            app:openTouchBg="true"
+            app:touchDrawable="@drawable/selector_bg"
             />
 
         <com.chaychan.library.BottomBarItem
@@ -75,6 +81,8 @@
             app:textColorSelected="@color/tab_selected_color"
             app:itemTextSize="8sp"
             app:itemMarginTop="-5dp"
+            app:openTouchBg="true"
+            app:touchDrawable="@drawable/selector_bg"
             />
 
     </com.chaychan.library.BottomBarLayout>
