--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -51,6 +51,7 @@
             app:itemTextSize="8sp"
             app:itemMarginTop="-5dp"
             app:openTouchBg="true"
+            app:unreadThreshold="999"
             app:touchDrawable="@drawable/selector_bg"
             />
 
