添加未读数颜色和背景的属性；添加提示文字颜色和背景的属性；添加提示点背景的属性

--- a/demo/src/main/res/values/colors.xml
+++ b/demo/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="tab_normal_color">#515051</color>
     <color name="tab_selected_color">#D33D3C</color>
 
+    <color name="unreadTextColor">#00ff00</color>
 </resources>
