--- a/demo/src/main/res/values/colors.xml
+++ b/demo/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="tab_selected_color">#D33D3C</color>
 
     <color name="unreadTextColor">#00ff00</color>
+    <color name="msgTextColor">#00ff00</color>
 </resources>
