修改demo演示，添加动态添加和移除条目;

--- a/demo/src/main/res/layout/activity_fragment_manager.xml
+++ b/demo/src/main/res/layout/activity_fragment_manager.xml
@@ -30,7 +30,7 @@
             android:layout_height="match_parent"
             app:iconNormal="@mipmap/tab_home_normal"
             app:iconSelected="@mipmap/tab_home_selected"
-            app:itemText="首页"
+            app:itemText="@string/tab_home"
             app:textColorNormal="@color/tab_normal_color"
             app:textColorSelected="@color/tab_selected_color"
             app:itemTextSize="8sp"
@@ -45,7 +45,7 @@
             android:layout_height="match_parent"
             app:iconNormal="@mipmap/tab_video_normal"
             app:iconSelected="@mipmap/tab_video_selected"
-            app:itemText="视频"
+            app:itemText="@string/tab_video"
             app:textColorNormal="@color/tab_normal_color"
             app:textColorSelected="@color/tab_selected_color"
             app:itemTextSize="8sp"
@@ -62,7 +62,7 @@
             android:layout_height="match_parent"
             app:iconNormal="@mipmap/tab_micro_normal"
             app:iconSelected="@mipmap/tab_micro_selected"
-            app:itemText="微头条"
+            app:itemText="@string/tab_micro"
             app:textColorNormal="@color/tab_normal_color"
             app:textColorSelected="@color/tab_selected_color"
             app:itemTextSize="8sp"
@@ -77,7 +77,7 @@
             android:layout_height="match_parent"
             app:iconNormal="@mipmap/tab_me_normal"
             app:iconSelected="@mipmap/tab_me_selected"
-            app:itemText="我的"
+            app:itemText="@string/tab_me"
             app:textColorNormal="@color/tab_normal_color"
             app:textColorSelected="@color/tab_selected_color"
             app:itemTextSize="8sp"
