增加TextBold属性，避免ViewPager的Adapter可能的NPE

--- a/demo/src/main/res/layout/activity_fragment_manager.xml
+++ b/demo/src/main/res/layout/activity_fragment_manager.xml
@@ -31,6 +31,7 @@
             app:iconNormal="@mipmap/tab_home_normal"
             app:iconSelected="@mipmap/tab_home_selected"
             app:itemText="@string/tab_home"
+            app:itemTextBold="true"
             app:textColorNormal="@color/tab_normal_color"
             app:textColorSelected="@color/tab_selected_color"
             app:itemTextSize="8sp"
@@ -46,6 +47,7 @@
             app:iconNormal="@mipmap/tab_video_normal"
             app:iconSelected="@mipmap/tab_video_selected"
             app:itemText="@string/tab_video"
+            app:itemTextBold="true"
             app:textColorNormal="@color/tab_normal_color"
             app:textColorSelected="@color/tab_selected_color"
             app:itemTextSize="8sp"
@@ -63,6 +65,7 @@
             app:iconNormal="@mipmap/tab_micro_normal"
             app:iconSelected="@mipmap/tab_micro_selected"
             app:itemText="@string/tab_micro"
+            app:itemTextBold="true"
             app:textColorNormal="@color/tab_normal_color"
             app:textColorSelected="@color/tab_selected_color"
             app:itemTextSize="8sp"
@@ -78,6 +81,7 @@
             app:iconNormal="@mipmap/tab_me_normal"
             app:iconSelected="@mipmap/tab_me_selected"
             app:itemText="@string/tab_me"
+            app:itemTextBold="true"
             app:textColorNormal="@color/tab_normal_color"
             app:textColorSelected="@color/tab_selected_color"
             app:itemTextSize="8sp"
