迁移到androidX;支持设置lottie

--- a/demo/src/main/res/layout/activity_view_pager_demo.xml
+++ b/demo/src/main/res/layout/activity_view_pager_demo.xml
@@ -7,12 +7,12 @@
     android:orientation="vertical"
     >
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        ></android.support.v4.view.ViewPager>
+        />
 
     <com.chaychan.library.BottomBarLayout
         android:id="@+id/bbl"
