BottomBarLayout重构，支持中间图标凸起

--- a/demo/src/main/res/layout/activity_dynamic_add_item.xml
+++ b/demo/src/main/res/layout/activity_dynamic_add_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <FrameLayout
@@ -15,11 +15,13 @@
     <com.chaychan.library.BottomBarLayout
         android:id="@+id/bbl"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:background="@color/tab_gb"
+        android:layout_height="wrap_content"
+        app:barBackground="@color/tab_gb"
+        app:barHeight="45dp"
+        app:iconHeight="30dp"
+        app:iconWidth="30dp"
+        app:textColorNormal="@color/tab_normal_color"
+        app:textColorSelected="@color/tab_selected_color"
         />
 
 </LinearLayout>
