--- a/demo/src/main/res/layout/activity_lottie_demo.xml
+++ b/demo/src/main/res/layout/activity_lottie_demo.xml
@@ -15,74 +15,14 @@
     <com.chaychan.library.BottomBarLayout
         android:id="@+id/bbl"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:background="@color/tab_gb"
-        >
-
-        <com.chaychan.library.BottomBarItem
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            app:iconWidth="30dp"
-            app:iconHeight="30dp"
-            app:lottieJson="home.json"
-            app:itemText="@string/tab_home"
-            app:textColorNormal="@color/tab_normal_color"
-            app:textColorSelected="@color/tab_selected_color"
-            app:itemTextSize="10sp"
-            app:openTouchBg="true"
-            app:touchDrawable="@drawable/selector_bg"
-            />
-
-        <com.chaychan.library.BottomBarItem
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            app:iconWidth="30dp"
-            app:iconHeight="30dp"
-            app:lottieJson="category.json"
-            app:itemText="@string/tab_category"
-            app:textColorNormal="@color/tab_normal_color"
-            app:textColorSelected="@color/tab_selected_color"
-            app:itemTextSize="10sp"
-            app:openTouchBg="true"
-            app:unreadThreshold="999"
-            app:touchDrawable="@drawable/selector_bg"
-            />
-
-        <com.chaychan.library.BottomBarItem
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            app:iconWidth="30dp"
-            app:iconHeight="30dp"
-            app:lottieJson="cart.json"
-            app:itemText="@string/tab_cart"
-            app:textColorNormal="@color/tab_normal_color"
-            app:textColorSelected="@color/tab_selected_color"
-            app:itemTextSize="10sp"
-            app:openTouchBg="true"
-            app:touchDrawable="@drawable/selector_bg"
-            />
-
-        <com.chaychan.library.BottomBarItem
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            app:iconWidth="30dp"
-            app:iconHeight="30dp"
-            app:lottieJson="mine.json"
-            app:itemText="@string/tab_me"
-            app:textColorNormal="@color/tab_normal_color"
-            app:textColorSelected="@color/tab_selected_color"
-            app:itemTextSize="10sp"
-            app:openTouchBg="true"
-            app:touchDrawable="@drawable/selector_bg"
-            />
-
-    </com.chaychan.library.BottomBarLayout>
+        android:layout_height="wrap_content"
+        app:barHeight="45dp"
+        app:barBackground="@color/tab_gb"
+        app:iconWidth="30dp"
+        app:iconHeight="30dp"
+        app:itemTextSize="10sp"
+        app:textColorNormal="@color/tab_normal_color"
+        app:textColorSelected="@color/tab_selected_color"
+        />
 
 </LinearLayout>
