--- a/demo/src/main/res/layout/activity_view_pager2_demo.xml
+++ b/demo/src/main/res/layout/activity_view_pager2_demo.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     >
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_content"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="45dp"
         />
 
     <com.chaychan.library.BottomBarLayout
         android:id="@+id/bbl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         app:barBackground="@color/tab_gb"
         app:barHeight="45dp"
         app:floatEnable="true"
@@ -31,10 +31,8 @@
         app:iconWidth="30dp"
         app:itemTextSize="8sp"
         app:itemMarginTop="-5dp"
-        app:touchDrawable="@drawable/selector_bg"
         app:unreadTextSize="10sp"
         app:msgTextSize="6sp"
         />
 
-
-</LinearLayout>
+</FrameLayout>
